expand jsdgam examples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -243,6 +243,7 @@ importFrom(graphics,rect)
 importFrom(graphics,rug)
 importFrom(graphics,title)
 importFrom(grid,arrow)
+importFrom(grid,unit)
 importFrom(insight,find_predictors)
 importFrom(insight,get_data)
 importFrom(insight,get_predictors)
