fix a bug in the retaining of offsets when gps are present

--- a/.github/workflows/R-CMD-check-rstan.yaml
+++ b/.github/workflows/R-CMD-check-rstan.yaml
@@ -58,6 +58,8 @@ jobs:
               corpcor
               splines2
               ggrepel
+              ggpp
+              ggarrow
               scoringRules
               matrixStats
               xts
