re-export `forecast()` method from generics

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -213,6 +213,7 @@ importFrom(brms,stancode)
 importFrom(brms,standata)
 importFrom(brms,student)
 importFrom(generics,augment)
+importFrom(generics,forecast)
 importFrom(generics,tidy)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,facet_wrap)
