--- a/.github/workflows/memcheck.yaml
+++ b/.github/workflows/memcheck.yaml
@@ -24,6 +24,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: apt install dependency
         run: |
+          sudo apt-get update
           sudo apt-get -y install valgrind
 
       - uses: r-lib/actions/setup-r@v2
