--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ S3method(print,how_to_cite)
 S3method(print,mvgam)
 S3method(print,mvgam_conditional_effects)
 S3method(print,mvgam_prefit)
+S3method(print,mvgam_summary)
 S3method(print,mvgammodel)
 S3method(residual_cor,jsdgam)
 S3method(residual_cor,mvgam)
