--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,8 +101,6 @@ export(as_draws_matrix)
 export(as_draws_rvars)
 export(augment)
 export(avg_predictions)
-export(bernoulli)
-export(beta_binomial)
 export(betar)
 export(code)
 export(compare_mvgams)
@@ -122,7 +120,6 @@ export(forecast)
 export(get_data)
 export(get_mvgam_priors)
 export(get_predict)
-export(gp)
 export(hindcast)
 export(how_to_cite)
 export(hypotheses)
@@ -130,7 +127,6 @@ export(irf)
 export(is.mvgam_trend)
 export(jsdgam)
 export(lfo_cv)
-export(lognormal)
 export(loo)
 export(loo_compare)
 export(lv_correlations)
@@ -166,7 +162,6 @@ export(prior_string)
 export(residual_cor)
 export(rhat)
 export(roll_eval_mvgam)
-export(s)
 export(score)
 export(series_to_mvgam)
 export(set_prior)
@@ -175,11 +170,7 @@ export(slopes)
 export(stability)
 export(stancode)
 export(standata)
-export(student)
 export(student_t)
-export(t2)
-export(te)
-export(ti)
 export(tidy)
 export(tweedie)
 export(variables)
@@ -199,7 +190,6 @@ importFrom(brms,dbeta_binomial)
 importFrom(brms,do_call)
 importFrom(brms,dstudent_t)
 importFrom(brms,get_prior)
-importFrom(brms,gp)
 importFrom(brms,logm1)
 importFrom(brms,lognormal)
 importFrom(brms,mcmc_plot)
@@ -217,6 +207,8 @@ importFrom(brms,set_prior)
 importFrom(brms,stancode)
 importFrom(brms,standata)
 importFrom(brms,student)
+importFrom(checkmate,assert)
+importFrom(checkmate,assert_class)
 importFrom(generics,augment)
 importFrom(generics,forecast)
 importFrom(generics,tidy)
@@ -251,6 +243,8 @@ importFrom(graphics,title)
 importFrom(grid,arrow)
 importFrom(grid,unit)
 importFrom(insight,find_predictors)
+importFrom(insight,format_error)
+importFrom(insight,format_warning)
 importFrom(insight,get_data)
 importFrom(insight,get_predictors)
 importFrom(loo,is.loo)
@@ -281,12 +275,8 @@ importFrom(mgcv,get.var)
 importFrom(mgcv,initial.sp)
 importFrom(mgcv,interpret.gam)
 importFrom(mgcv,nb)
-importFrom(mgcv,s)
 importFrom(mgcv,smooth.construct)
 importFrom(mgcv,smoothCon)
-importFrom(mgcv,t2)
-importFrom(mgcv,te)
-importFrom(mgcv,ti)
 importFrom(parallel,clusterExport)
 importFrom(parallel,setDefaultCluster)
 importFrom(parallel,stopCluster)
@@ -383,5 +373,6 @@ importFrom(stats,update.formula)
 importFrom(utils,getFromNamespace)
 importFrom(utils,head)
 importFrom(utils,lsf.str)
+importFrom(utils,packageVersion)
 importFrom(utils,tail)
 useDynLib(mvgam, .registration = TRUE)
