Add detailed context on Stan code and data generation and integration principles

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -32,3 +32,5 @@
 ^.*-implementation\.md$
 ^mvgam-brms-refactoring-plan\.md$
 ^CURRENT_STATUS\.md$
+^brms-stan-integration-patterns\.md$
+^Stan specs$
