Fix stanvar creation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,8 +21,6 @@ S3method(find_predictors,mvgam)
 S3method(find_predictors,mvgam_prefit)
 S3method(fitted,mvgam)
 S3method(forecast,mvgam)
-S3method(formula,mvgam)
-S3method(formula,mvgam_prefit)
 S3method(get_coef,mvgam)
 S3method(get_data,mvgam)
 S3method(get_data,mvgam_prefit)
@@ -62,7 +60,6 @@ S3method(print,mvgam_conditional_effects)
 S3method(print,mvgam_prefit)
 S3method(print,mvgam_summary)
 S3method(print,mvgam_trend)
-S3method(print,mvgammodel)
 S3method(residual_cor,jsdgam)
 S3method(residual_cor,mvgam)
 S3method(residuals,mvgam)
@@ -72,17 +69,12 @@ S3method(set_coef,mvgam)
 S3method(smooth.construct,mod.smooth.spec)
 S3method(smooth.construct,moi.smooth.spec)
 S3method(stability,mvgam)
-S3method(stancode,mvgam)
-S3method(stancode,mvgam_prefit)
-S3method(standata,mvgam_prefit)
 S3method(summary,mvgam)
 S3method(summary,mvgam_fevd)
 S3method(summary,mvgam_forecast)
 S3method(summary,mvgam_irf)
 S3method(summary,mvgam_prefit)
 S3method(tidy,mvgam)
-S3method(update,jsdgam)
-S3method(update,mvgam)
 S3method(variables,mvgam)
 export("%>%")
 export(AR)
@@ -101,9 +93,6 @@ export(as_draws_matrix)
 export(as_draws_rvars)
 export(augment)
 export(avg_predictions)
-export(betar)
-export(code)
-export(compare_mvgams)
 export(comparisons)
 export(conditional_effects)
 export(custom_trend)
@@ -111,7 +100,6 @@ export(datagrid)
 export(drawDotmvgam)
 export(dynamic)
 export(ensemble)
-export(eval_mvgam)
 export(eval_smoothDothilbertDotsmooth)
 export(eval_smoothDotmodDotsmooth)
 export(eval_smoothDotmoiDotsmooth)
@@ -127,15 +115,14 @@ export(irf)
 export(is.mvgam_trend)
 export(jsdgam)
 export(lfo_cv)
+export(list_trend_types)
 export(loo)
 export(loo_compare)
 export(lv_correlations)
 export(mcmc_plot)
-export(mvgam)
+export(mvgam_enhanced)
 export(mvgam_trend_choices)
-export(nb)
 export(neff_ratio)
-export(nmix)
 export(nuts_params)
 export(ordinate)
 export(plot_comparisons)
@@ -159,20 +146,17 @@ export(predictions)
 export(prior)
 export(prior_)
 export(prior_string)
+export(register_custom_trend)
+export(register_trend_type)
 export(residual_cor)
 export(rhat)
-export(roll_eval_mvgam)
 export(score)
 export(series_to_mvgam)
 export(set_prior)
 export(sim_mvgam)
 export(slopes)
 export(stability)
-export(stancode)
-export(standata)
-export(student_t)
 export(tidy)
-export(tweedie)
 export(variables)
 importFrom(Rcpp,evalCpp)
 importFrom(bayesplot,color_scheme_get)
@@ -181,34 +165,18 @@ importFrom(bayesplot,log_posterior)
 importFrom(bayesplot,neff_ratio)
 importFrom(bayesplot,nuts_params)
 importFrom(bayesplot,pp_check)
-importFrom(brms,bernoulli)
-importFrom(brms,beta_binomial)
-importFrom(brms,brm)
-importFrom(brms,brmsterms)
 importFrom(brms,conditional_effects)
-importFrom(brms,dbeta_binomial)
 importFrom(brms,do_call)
-importFrom(brms,dstudent_t)
 importFrom(brms,get_prior)
 importFrom(brms,logm1)
 importFrom(brms,lognormal)
 importFrom(brms,mcmc_plot)
 importFrom(brms,ndraws)
-importFrom(brms,pbeta_binomial)
 importFrom(brms,prior)
 importFrom(brms,prior_)
 importFrom(brms,prior_string)
-importFrom(brms,pstudent_t)
-importFrom(brms,qstudent_t)
-importFrom(brms,rbeta_binomial)
 importFrom(brms,read_csv_as_stanfit)
-importFrom(brms,rstudent_t)
 importFrom(brms,set_prior)
-importFrom(brms,stancode)
-importFrom(brms,standata)
-importFrom(brms,student)
-importFrom(checkmate,assert)
-importFrom(checkmate,assert_class)
 importFrom(generics,augment)
 importFrom(generics,forecast)
 importFrom(generics,tidy)
@@ -225,9 +193,7 @@ importFrom(grDevices,hcl.colors)
 importFrom(grDevices,rgb)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
-importFrom(graphics,barplot)
 importFrom(graphics,box)
-importFrom(graphics,boxplot)
 importFrom(graphics,bxp)
 importFrom(graphics,hist)
 importFrom(graphics,layout)
@@ -243,8 +209,6 @@ importFrom(graphics,title)
 importFrom(grid,arrow)
 importFrom(grid,unit)
 importFrom(insight,find_predictors)
-importFrom(insight,format_error)
-importFrom(insight,format_warning)
 importFrom(insight,get_data)
 importFrom(insight,get_predictors)
 importFrom(loo,is.loo)
@@ -264,20 +228,9 @@ importFrom(marginaleffects,plot_slopes)
 importFrom(marginaleffects,predictions)
 importFrom(marginaleffects,set_coef)
 importFrom(marginaleffects,slopes)
-importFrom(methods,cbind2)
 importFrom(mgcv,Predict.matrix)
-importFrom(mgcv,Rrank)
 importFrom(mgcv,bam)
-importFrom(mgcv,betar)
-importFrom(mgcv,gam.control)
-importFrom(mgcv,gam.side)
-importFrom(mgcv,get.var)
-importFrom(mgcv,initial.sp)
-importFrom(mgcv,interpret.gam)
-importFrom(mgcv,nb)
 importFrom(mgcv,smooth.construct)
-importFrom(mgcv,smoothCon)
-importFrom(parallel,clusterExport)
 importFrom(parallel,setDefaultCluster)
 importFrom(parallel,stopCluster)
 importFrom(posterior,as_draws)
@@ -289,78 +242,44 @@ importFrom(posterior,as_draws_rvars)
 importFrom(posterior,rhat)
 importFrom(posterior,variables)
 importFrom(rlang,missing_arg)
-importFrom(rlang,parse_expr)
 importFrom(rlang,warn)
 importFrom(rstantools,posterior_epred)
 importFrom(rstantools,posterior_linpred)
 importFrom(rstantools,posterior_predict)
-importFrom(stats,.getXlevels)
-importFrom(stats,Gamma)
 importFrom(stats,acf)
 importFrom(stats,as.dist)
 importFrom(stats,as.formula)
-importFrom(stats,binomial)
 importFrom(stats,coef)
 importFrom(stats,complete.cases)
 importFrom(stats,cor)
 importFrom(stats,cov)
 importFrom(stats,cov2cor)
-importFrom(stats,dbeta)
-importFrom(stats,dbinom)
 importFrom(stats,density)
-importFrom(stats,dgamma)
-importFrom(stats,dlnorm)
-importFrom(stats,dnbinom)
-importFrom(stats,dnorm)
-importFrom(stats,dpois)
-importFrom(stats,drop.terms)
 importFrom(stats,ecdf)
 importFrom(stats,fitted)
 importFrom(stats,formula)
 importFrom(stats,frequency)
-importFrom(stats,gaussian)
 importFrom(stats,hclust)
 importFrom(stats,is.ts)
 importFrom(stats,lag)
-importFrom(stats,lm)
 importFrom(stats,logLik)
 importFrom(stats,mad)
-importFrom(stats,make.link)
-importFrom(stats,median)
 importFrom(stats,model.frame)
-importFrom(stats,model.matrix)
-importFrom(stats,model.offset)
-importFrom(stats,na.fail)
-importFrom(stats,na.omit)
 importFrom(stats,na.pass)
 importFrom(stats,pacf)
-importFrom(stats,pbeta)
-importFrom(stats,pbinom)
-importFrom(stats,pgamma)
-importFrom(stats,plnorm)
-importFrom(stats,plogis)
-importFrom(stats,pnorm)
-importFrom(stats,poisson)
-importFrom(stats,ppois)
 importFrom(stats,predict)
 importFrom(stats,printCoefmat)
-importFrom(stats,qbinom)
 importFrom(stats,qcauchy)
-importFrom(stats,qlogis)
-importFrom(stats,qnorm)
 importFrom(stats,qqline)
 importFrom(stats,qqnorm)
 importFrom(stats,quantile)
 importFrom(stats,rbeta)
-importFrom(stats,rbinom)
 importFrom(stats,reformulate)
 importFrom(stats,residuals)
 importFrom(stats,rgamma)
 importFrom(stats,rlnorm)
-importFrom(stats,rnbinom)
 importFrom(stats,rnorm)
 importFrom(stats,rpois)
-importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(stats,start)
@@ -369,10 +288,7 @@ importFrom(stats,terms.formula)
 importFrom(stats,time)
 importFrom(stats,ts)
 importFrom(stats,update)
-importFrom(stats,update.formula)
 importFrom(utils,getFromNamespace)
 importFrom(utils,head)
-importFrom(utils,lsf.str)
 importFrom(utils,packageVersion)
-importFrom(utils,tail)
 useDynLib(mvgam, .registration = TRUE)
