Add make_stan functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -103,6 +103,8 @@ export(list_trend_types)
 export(loo)
 export(loo_compare)
 export(lv_correlations)
+export(make_stancode.mvgam_formula)
+export(make_standata.mvgam_formula)
 export(mcmc_plot)
 export(mvgam)
 export(mvgam_formula)
