add tests for stancode and standata

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ S3method(print,mvgam_conditional_effects)
 S3method(print,mvgam_formula)
 S3method(print,mvgam_prefit)
 S3method(print,mvgam_trend)
+S3method(print,mvgamstancode)
 S3method(print,trend_param)
 S3method(residual_cor,jsdgam)
 S3method(residual_cor,mvgam)
@@ -60,6 +61,10 @@ S3method(set_coef,mvgam)
 S3method(smooth.construct,mod.smooth.spec)
 S3method(smooth.construct,moi.smooth.spec)
 S3method(stability,mvgam)
+S3method(stancode,mvgam)
+S3method(stancode,mvgam_formula)
+S3method(stancode,mvgam_prefit)
+S3method(standata,mvgam_formula)
 S3method(summary,mvgam_fevd)
 S3method(summary,mvgam_forecast)
 S3method(summary,mvgam_irf)
@@ -103,8 +108,6 @@ export(list_trend_types)
 export(loo)
 export(loo_compare)
 export(lv_correlations)
-export(make_stancode.mvgam_formula)
-export(make_standata.mvgam_formula)
 export(mcmc_plot)
 export(mvgam)
 export(mvgam_formula)
