Implement print and summary methods for mvgam objects
- Added summary.mvgam() with parameter categorization and MCMC diagnostics
- Added print.mvgam_summary() for formatted summary output
- Fixed print.mvgam() with helper functions (family, formula, nobs, extract_mcmc_info)
- Used mvgam_summary class name following snake_case convention
- Added comprehensive tests for print and summary methods
- Updated TRD documentation with task completion details
- All tests passing (exit code 0)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,9 @@ S3method(as_draws_rvars,mvgam)
 S3method(augment,mvgam)
 S3method(c,trend_param)
 S3method(ensemble,mvgam_forecast)
+S3method(family,mvgam)
 S3method(fevd,mvgam)
+S3method(formula,mvgam)
 S3method(get_prior,brmsformula)
 S3method(get_prior,default)
 S3method(get_prior,formula)
@@ -27,6 +29,7 @@ S3method(lfo_cv,mvgam)
 S3method(loo,mvgam)
 S3method(loo_compare,mvgam)
 S3method(mcmc_plot,mvgam)
+S3method(nobs,mvgam)
 S3method(ordinate,jsdgam)
 S3method(pairs,mvgam)
 S3method(plot,mvgam)
@@ -41,6 +44,7 @@ S3method(print,how_to_cite)
 S3method(print,mvgam)
 S3method(print,mvgam_formula)
 S3method(print,mvgam_prefit)
+S3method(print,mvgam_summary)
 S3method(print,mvgam_trend)
 S3method(print,mvgamstancode)
 S3method(print,trend_param)
@@ -54,6 +58,7 @@ S3method(stancode,mvgam)
 S3method(stancode,mvgam_formula)
 S3method(stancode,mvgam_prefit)
 S3method(standata,mvgam_formula)
+S3method(summary,mvgam)
 S3method(summary,mvgam_fevd)
 S3method(summary,mvgam_forecast)
 S3method(summary,mvgam_irf)
