--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ S3method(ppc,mvgam)
 S3method(print,how_to_cite)
 S3method(print,mvgam)
 S3method(print,mvgam_formula)
+S3method(print,mvgam_pooled_summary)
 S3method(print,mvgam_prefit)
 S3method(print,mvgam_summary)
 S3method(print,mvgam_trend)
@@ -62,6 +63,7 @@ S3method(summary,mvgam)
 S3method(summary,mvgam_fevd)
 S3method(summary,mvgam_forecast)
 S3method(summary,mvgam_irf)
+S3method(summary,mvgam_pooled)
 S3method(tidy,mvgam)
 S3method(variables,mvgam)
 export("%>%")
@@ -98,6 +100,7 @@ export(lv_correlations)
 export(mcmc_plot)
 export(mvgam)
 export(mvgam_formula)
+export(mvgam_multiple)
 export(mvgam_trend_choices)
 export(ordinate)
 export(plot_mvgam_factors)
