feat: implement prepare_predictions.mock_stanfit() method
- Add S3 method for mock_stanfit objects to generate design matrices

- Follows brms internal pattern: adds dummy responses before standata()

- Handles univariate and multivariate formulas correctly

- Returns minimal brmsprep object with sdata, draws, formula, family

- Add exploration scripts documenting prep object structure

- Update task list with completed subtasks 2.3.1-2.3.4

- Export method via NAMESPACE, generate documentation

Related to T2.3 in trd-prediction-system

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(as_draws,mvgam)
 S3method(as_draws_array,mvgam)
 S3method(as_draws_df,mvgam)
 S3method(as_draws_list,mvgam)
+S3method(as_draws_matrix,mock_stanfit)
 S3method(as_draws_matrix,mvgam)
 S3method(as_draws_rvars,mvgam)
 S3method(augment,mvgam)
@@ -40,6 +41,7 @@ S3method(plot,mvgam_lfo)
 S3method(plot,mvgam_residcor)
 S3method(pp_check,mvgam)
 S3method(ppc,mvgam)
+S3method(prepare_predictions,mock_stanfit)
 S3method(print,how_to_cite)
 S3method(print,mvgam)
 S3method(print,mvgam_formula)
