Implement posterior_linpred.mvgam() S3 method
- Add R/posterior_linpred.R with get_combined_linpred() helper and
  posterior_linpred.mvgam() S3 method
- Combines observation and trend linear predictors on link scale
- Supports process_error toggle (TRUE=full uncertainty, FALSE=trend
  at posterior mean)
- Delegates validation to extract_component_linpred() (no duplication)
- Add 11 validation tests to validate_extraction_vs_brms.R (all pass)
- Update NAMESPACE to export S3 method and import brms generic

Related to T1.0 in trd-prediction-system

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ S3method(plot,mvgam_forecast)
 S3method(plot,mvgam_irf)
 S3method(plot,mvgam_lfo)
 S3method(plot,mvgam_residcor)
+S3method(posterior_linpred,mvgam)
 S3method(pp_check,mvgam)
 S3method(ppc,mvgam)
 S3method(prepare_predictions,mock_stanfit)
@@ -132,6 +133,7 @@ importFrom(bayesplot,pp_check)
 importFrom(brms,do_call)
 importFrom(brms,lognormal)
 importFrom(brms,mcmc_plot)
+importFrom(brms,posterior_linpred)
 importFrom(generics,augment)
 importFrom(generics,tidy)
 importFrom(ggplot2,aes)
