fix: correct pkgdown config and add devtools to workflow

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -69,6 +69,7 @@ jobs:
               testthat
               usethis
               rcmdcheck
+              devtools
 
       - name: Build Cmdstan
         run: |
